--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,26 @@
 asgiref==3.7.2
 bleach==6.1.0
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.5
+defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==4.2.10
+django-allauth==0.57.2
 django-summernote==0.8.20.0
 gunicorn==20.1.0
+idna==3.6
+oauthlib==3.2.2
 psycopg2==2.9.9
+pycparser==2.21
+PyJWT==2.8.0
+python3-openid==3.2.0
+requests==2.31.0
+requests-oauthlib==1.4.0
 setuptools==69.1.1
 six==1.16.0
 sqlparse==0.4.4
+urllib3==2.2.1
 webencodings==0.5.1
 whitenoise==5.3.0
