--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ bleach==6.1.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+cloudinary==1.36.0
 crispy-bootstrap5==0.7
 cryptography==42.0.5
 defusedxml==0.7.1
 dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==4.2.10
 django-allauth==0.57.2
 django-crispy-forms==2.1
@@ -23,6 +25,6 @@ requests-oauthlib==1.4.0
 setuptools==69.1.1
 six==1.16.0
 sqlparse==0.4.4
-urllib3==2.2.1
+urllib3==1.26.18
 webencodings==0.5.1
 whitenoise==5.3.0
